--- a/st3.css
+++ b/st3.css
@@ -1,5 +1,26 @@
 body {
     background-image:url(pics/bgi2.1.jpg)
+}   .all h1 {
+    text-align: center;
+    color: rgb(210, 160, 49);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}   .tp {
+    background: darkcyan;
+    overflow: hidden;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+    .tp a {
+        float: left;
+   color: rgb(210, 160, 49);
+   text-align: center;
+   padding: 14px 16px;
+   text-decoration: lightseagreen;
+   font-size: 24px;
+    } 
+    .tp a:hover {
+        background-color: rgb(210, 160, 49);
+    color: darkcyan;
+    }
 
 /*rgb(210, 160, 49)*/
+/*font familyfont-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;*/
